--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,9 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-plaid-link": "^4.0.1",
     "sonner": "^2.0.5",
+    "swr": "^2.3.3",
     "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
